# sagitta

./: .env  .gitignore  README.md  environment.yml  pyproject.toml  setup
config/: market_config.yaml
sagitta/python/sagitta/client/: fetch_client.py  fetch_market.py
sagitta/python/sagitta/prep/: clean_data.py  klines_to_dataframe.py
sagitta/python/sagitta/utils/: dataframe_tools.py  io.py
sagitta/scripts/fetch/: create_indicator_info.py  download_market_data.py
sagitta/src/client/: fetch_market.py
sagitta/src/python/client/: fetch_client.py
sagitta/src/python/utils/: directory_tools.py
sagitta/src/utils/: io.py
src/client/: fetch_data.py  process_data.py
src/sagitta/client/: connect_to_client.py  convert_to_dataframe.py  fetch_market_data.py
src/sagitta/prep/: add_indicatior_info.py  convert_to_dataframe.py
src/sagitta/preprocessing/: add_feature_information.py  add_indicatior_info.py
src/sagitta/utils/: io.py  manipulate_dataframe.py
src/utils/: io.py
workflow/rules/: get_and_manipulate_market_data.smk
workflow/scripts/fetch/: clean_market_data.py  create_indicator_info.py  download_market_data.py  download_market_test_data.py
workflows/scripts/fetch/: download_market_data.py
