[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sagitta"
version = "0.1.0"
description = "An ML-based cryptocurrency analysis and trading workflow"
authors = [
    { name = "Michael Kane", email = "michaelkane14@icloud.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "pyyaml",
    "python-binance",
]

[tool.setuptools.packages.find]
where = ["src/sagitta"]